...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_add"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="ADD CITY" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="CLEAR ALL" />
        </LinearLayout>

        <ListView
            android:id="@+id/city_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:choiceMode="singleChoice"
            android:listSelector="#999999" />

...
